--- a/layouts/partials/portfolio/experience.html
+++ b/layouts/partials/portfolio/experience.html
@@ -4,12 +4,12 @@
     {{ range .Site.Data.experience }}
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
-            <h3 class="mb-0">{{ .role }}</h3>
+            <h3 class="mb-0">{{ .role | markdownify}}</h3>
             <div class="subheading mb-3">{{ .company | markdownify }}</div>
             <p>{{ .summary | markdownify }}</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">{{ .range }}</span>
+            <span class="text-primary">{{ .range | markdownify }}</span>
           </div>
         </div>
     {{ end }}
