--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -28,9 +28,9 @@
             <a class="nav-link js-scroll-trigger" href="/#open">Open Source</a>
           </li>
       {{ end }}
-      {{ if .Site.Params.showPublications }}
+      {{ if .Site.Params.showAwards }}
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#{{ default "Publications" .Site.Params.publicationsAlternateName }}">{{ default "Publications" .Site.Params.publicationsAlternateName }}</a>
+            <a class="nav-link js-scroll-trigger" href="/#awards">Awards</a>
           </li>
       {{ end }}
       {{ if .Site.Params.showExperience }}
