--- a/layouts/partials/portfolio/experience.html
+++ b/layouts/partials/portfolio/experience.html
@@ -2,7 +2,7 @@
   <div class="my-auto" id="experience-content">
     <h2 class="mb-5">Experience</h2>
     {{ range .Site.Data.experience }}
-        <div class="resume-item d-flex flex-column flex-md-row mb-5">
+        <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">{{ .role | markdownify}}</h3>
             <div class="subheading mb-3">{{ .company | markdownify }}</div>
@@ -12,6 +12,7 @@
             <span class="text-primary">{{ .range | markdownify }}</span>
           </div>
         </div>
+        <div class="mb-5">{{ partial "techtags" .tags }}</div>
     {{ end }}
   </div>
 
