--- a/layouts/partials/projectsSummary.html
+++ b/layouts/partials/projectsSummary.html
@@ -12,4 +12,4 @@
     <p class><a href="{{.Permalink}}">Read more..</a></p>
   </div>
 </div>
-<div>{{ partial "techtags" . }}</div>
+<div>{{ partial "techtags" .Params.tags }}</div>
