--- a/layouts/partials/techtags.html
+++ b/layouts/partials/techtags.html
@@ -1,5 +1,5 @@
 <ul class="tags">
-    {{ range  .Params.tags }}
+    {{ range  . }}
       <li><a class="tag" href="{{ "/tags/" | relURL }}{{ . | urlize }}">{{ . }}</a></li>
     {{ end }}
 </ul>
