--- a/layouts/publications/single.html
+++ b/layouts/publications/single.html
@@ -7,7 +7,7 @@
     {{ with .Params.image }}<img src="{{ . }}" style="max-height:300px;max-width:30%;" align="right"/>{{ end }}
     {{ .Content }}
     <p class="mt-3">
-    {{ partial "techtags" . }}
+    {{ partial "techtags" .Params.tags }}
     </p>
   </div>
 </section>
