--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -3,7 +3,7 @@
 <section class="resume-section p-3 p-lg-5 d-flex d-column">
   <div class="my-auto">
     <h2 class="mb-0"><span class="text-primary">{{ .Title }}</span></h2>
-    {{ .Content }}
+    {{ .Content | safeHTML}}
     {{ with .Params.link }}<p>Project link: <a href="{{ . }}">{{ . }}</a></p>{{ end }}
     {{ partial "techtags" .Params.tags }}
   </div>
