--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,17 +4,17 @@
        {{ partial "portfolio/skills.html" . }}
    {{ end }}
    {{ if .Site.Params.showProjects }}
-      {{ with .Site.GetPage "section" "projects/creations" }}
+      {{ with .Site.GetPage "section" "projects" }}
          {{ .Scratch.Set "sectionId" "projects" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
    {{ end }}
-   {{ if .Site.Params.showOpenSource }}
+   <!-- {{ if .Site.Params.showOpenSource }}
       {{ with .Site.GetPage "section" "projects/contributions" }}
          {{ .Scratch.Set "sectionId" "open" }}
          {{ partial "sectionSummary" . }}
       {{ end }}
-   {{ end }}
+   {{ end }} -->
    {{ if .Site.Params.showAwards }}
       {{ with .Site.GetPage "section" "awards" }}
       {{ .Scratch.Set "sectionId" "awards" }}
